--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     />
   </head>
   <body>
-    <script src="/JS/main.js"></script>
+    <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
