--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <img class="loctation-icon" src="/Img/Location.svg" />
           USE MY LOCATION
         </button>
+        <div class="gym-list" id="gyms-info"></div>
       </div>
       <div id="map"></div>
     </section>
