Webpack 5 bug fix.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <a class="nav__logo" aria-label="Fitix" href="/"
           ><img src="<%=require('/Img/Logo.svg')%>" alt=""
         /></a>
-        <img class="nav__icon" id="menu-icon" src="/Img/menu.svg" alt="" />
+        <img
+          class="nav__icon"
+          id="menu-icon"
+          src="<%=require('/Img/menu.svg')%>"
+          alt=""
+        />
         <div class="nav__content">
           <ul>
             <li><a href="#">Home</a></li>
