--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Health is wealth</h1>
             <p>
               All in one at Fitix, get the latest exercises, diets, workout
-              plans, track caliures etc.
+              plans, track calories etc.
             </p>
             <button class="btn">Check IT OUT</button>
             <p></p>
@@ -59,7 +59,7 @@
             id="address"
             type="text"
             class="input input-group-input"
-            placeholder="Search postcode..."
+            placeholder="Search address or city..."
           />
           <button id="inputLocation">
             <img src="<%=require('/Img/Search.svg')%>" alt="" />
@@ -115,8 +115,9 @@
             <option value="Female">Female</option>
           </select>
           <br />
-          <button class="btn" id="Btn-clear">Clear input</button>
           <button class="btn" id="Btn-calc">Calculate</button>
+          <button class="btn" id="Btn-clear">Clear input</button>
+
           <div>
             <p>Daily Calorie intake:</p>
             <p id="Day-calorie"></p>
