Some changes to make the code more clean.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </section>
-    <!--Nav-and-hero-block Start-->
+    <!--Nav-and-hero-block End-->
     <!--Local-gym-block Start-->
     <section class="Local-gym-block grid grid--1x2">
       <div data-aos="fade-right" class="Local-gym-block__content">
@@ -164,7 +164,7 @@
         </ul>
       </section>
     </footer>
-    <!--Footer-block Start-->
+    <!--Footer-block End-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
